--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "now": "^12.1.5",
-    "react": "^16.7.0-alpha.2",
-    "react-cache": "^2.0.0-alpha.1",
-    "react-dom": "^16.7.0-alpha.2",
-    "react-scripts": "2.1.1",
-    "styled-components": "^4.1.1",
-    "tone": "^0.12.80"
+    "now": "^21.0.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-scripts": "5.0.1",
+    "styled-components": "^6.1.13",
+    "swr": "^2.2.5",
+    "tone": "^15.0.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
+    "test": "NODE_OPTIONS=--openssl-legacy-provider react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
